# betfair_parser

./: .gitignore  .pre-commit-config.yaml  LICENSE.txt  README.md  pyproject.toml
.github/workflows/: benchmark.yml  build.yml  release.yml
betfair_parser/: cache.py  client.py  constants.py  core.py  endpoints.py  exceptions.py  stream.py  strenums.py  util.py
betfair_parser/spec/: common.py  constants.py  endpoints.py  error.py  heartbeat.py  identity.py  navigation.py  race_status.py
betfair_parser/spec/accounts/: __init__.py  enums.py  operations.py  type_definitions.py
betfair_parser/spec/api/: account.py  betting.py  core.py  error.py  markets.py  navigation.py
betfair_parser/spec/betting/: __init__.py  enums.py  exceptions.py  listings.py  operations.py  orders.py  type_definitions.py
betfair_parser/spec/common/: __init__.py  enums.py  messages.py  type_definitions.py  types.py
betfair_parser/spec/streaming/: __init__.py  core.py  enums.py  mcm.py  messages.py  ocm.py  status.py  type_definitions.py
dev/bench/: data.js
tests/: test_core.py
tests/integration/: benchmark.py  test_completeness.py  test_completeness_streaming.py  test_integration.py  test_live.py  test_perf.py  test_stream.py
tests/resources/: __init__.py
tests/resources/data/: 1.127236622.bz2  1.164917629.bz2  1.185781277.bz2  1.205822330.bz2  1.242971311.bz2
tests/resources/documents/: AccountAPING.xml  ESASwaggerSchema.json  HeartbeatAPING.xml  SportsAPING.xml
tests/resources/requests/: cert_login.json  heartbeat.json  navigation_list_navigation.json
tests/resources/requests/accounts/: get_account_details.json  get_account_funds.json
tests/resources/requests/betting/: cancel_orders_partly.json  list_cleared_orders.json  list_event_types.json  list_market_book.json  list_market_book_no_rollup.json  list_market_catalogue.json  place_orders_bsp.json  place_orders_lapse.json  replace_orders.json
tests/resources/requests/streaming/: market_subscription_1.json  market_subscription_2.json  market_subscription_3.json  order_subscription.json
tests/resources/responses/: cert_login.json  heartbeat_success.json  logout.json
tests/resources/responses/accounts/: get_account_funds_error_no_appkey.json  get_account_funds_no_exposure.json  get_account_funds_with_exposure.json
tests/resources/responses/betting/: cancel_orders_failure.json  cancel_orders_partly.json  cancel_orders_success.json  list_cleared_orders.json  list_cleared_orders_empty.json  list_current_orders.json  list_event_types.json  list_market_book.json  list_market_book_no_rollup.json  list_market_catalog.json  list_market_catalog_bet_delay_models.json  list_market_catalog_colours_filename_url.json  list_market_catalog_invalid_cloth_number.json  place_orders_failure.json  place_orders_lapse.json  place_orders_no_persistence.json  place_orders_success.json  replace_orders_success.json
tests/resources/responses/streaming/: mcm_bsp.json  mcm_con_true.json  mcm_latency.json  mcm_market_definition.json  mcm_market_definition_bet_delay_models.json  mcm_market_definition_bsp.json  mcm_market_definition_runner_removed.json  mcm_market_updates.json  mcm_samples.ndjson  ocm_filled_different_price.json  ocm_full_image_strategy.json  ocm_multiple_fills.json  ocm_new_full_image.json  ocm_new_full_image_2.json  ocm_runner_removed.json  ocm_update.json  status_error.json  status_error_alt.json  status_no_id.json
tests/resources/streaming/: bsp_data.json  market_definition_each_way.json  mcm_BSP.json  mcm_UPDATE_md.json  ocm_DUPLICATE_EXECUTION.json  ocm_NEW_FULL_IMAGE.json  ocm_filled_different_price.json  streaming_market_definition.json  streaming_ocm_NEW_FULL_IMAGE2.json  streaming_status_error.json
tests/unit/: conftest.py  test_account.py  test_betting.py  test_cache.py  test_common.py  test_core.py  test_identity.py  test_markets.py  test_navigation.py  test_streaming.py  test_strenums.py
tests/unit/api/: test_account.py  test_betting.py  test_betting_api.py  test_markets.py  test_markets_api.py  test_navigation.py
tests/unit/requests/: test_account_requests.py  test_betting_requests.py
tests/unit/streaming/: test_streaming_core.py
