[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[project]
name = "betfair_parser"
description = "A betfair parser"
dynamic = ["version"]
readme = "README.md"
license = {file = "LICENSE.txt"}
authors = [
    {name = "Bradley McElroy", email = "bradley.mcelroy@live.com"}
]
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries",
    "Topic :: File Formats :: JSON",
    "Development Status :: 4 - Beta",
]
keywords = ["parser", "betfair", "api", "json", "streaming"]
dependencies = [
    "msgspec>=0.16.0",
]
optional-dependencies.dev = [
    "pytest>=7.1",
    "pytest-asyncio>=0.21",
    "pytest-benchmark>=4.0",
    "twine>=4.0.2",
    "requests>=2.20.0",
]

[project.urls]
Homepage = "https://github.com/limx0/betfair_parser"
Documentation = "https://limx0.github.io/betfair_parser/"
"Bug Tracker" = "https://github.com/limx0/betfair_parser/issues"

[tool.poetry]
name = "betfair_parser"
version = "0.0.0"
description = "A betfair parser"
readme = "README.md"
authors = ["Bradley McElroy <bradley.mcelroy@live.com>"]

[tool.poetry.dependencies]
python = ">=3.9,<4.0"
msgspec = ">=0.16"

[tool.poetry.dev-dependencies]
pytest = "^7.1"
pytest-asyncio = "^0.21"
pytest-benchmark = "^4.0"
requests = "^2.20"

[tool.poetry.group.dev.dependencies]
twine = "^4.0.2"

[tool.black]
line-length = 120

[tool.isort]
profile = "black"
line_length = 120
lines_after_imports = 2
combine_as_imports = true

[tool.codespell]
skip = "poetry.lock,tests/resources/*"
ignore-regex = ".*codespell-ignore$"

[tool.ruff]
fix = false
line-length = 120

[tool.mypy]
strict_optional = false
ignore_missing_imports = true
warn_no_return = true
check_untyped_defs = true
