[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[project]
name = "betfair_parser"
description = "A betfair parser"
dynamic = ["version"]
readme = "README.md"
license = {file = "LICENSE.txt"}
authors = [
    {name = "Bradley McElroy", email = "bradley.mcelroy@live.com"}
]
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries",
    "Topic :: File Formats :: JSON",
    "Development Status :: 4 - Beta",
]
keywords = ["parser", "betfair", "api", "json", "streaming"]
dependencies = [
    "msgspec>=0.18.5",
]
optional-dependencies.dev = [
    "pytest>=7.1",
    "pytest-asyncio>=0.21.0",
    "pytest-benchmark>=4.0",
    "twine>=4.0.2",
    "requests>=2.20.0",
]

[project.urls]
Homepage = "https://github.com/limx0/betfair_parser"
Documentation = "https://limx0.github.io/betfair_parser/"
"Bug Tracker" = "https://github.com/limx0/betfair_parser/issues"

[tool.poetry]
name = "betfair_parser"
version = "0.0.0"
description = "A betfair parser"
readme = "README.md"
authors = ["Bradley McElroy <bradley.mcelroy@live.com>"]

[tool.poetry.dependencies]
python = ">=3.9,<4.0"
msgspec = ">=0.18.5"

[tool.poetry.dev-dependencies]
pytest = "^7.1"
pytest-asyncio = "^0.21.0"
pytest-benchmark = "^4.0"
requests = "^2.20"

[tool.poetry.group.dev.dependencies]
twine = "^4.0.2"

[tool.codespell]
skip = "*.bz2,*.json,*.xml,poetry.lock"
ignore-regex = ".*codespell-ignore$"

[tool.mypy]
strict_optional = false
ignore_missing_imports = true
warn_no_return = true
warn_unused_ignores = true
check_untyped_defs = true

[tool.ruff]
fix = false
line-length = 120
lint.extend-select = ["UP"]
lint.isort.lines-after-imports = 2

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

[tool.black]
line-length = 120

[tool.isort]
profile = "black"
line_length = 120
lines_after_imports = 2
combine_as_imports = true
