[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "betfair_parser"
version = "0.0.0"
description = "A betfair parser"
readme = "README.md"
license = {file = "LICENSE.txt"}
authors = [
    {name = "Bradley McElroy", email = "bradley.mcelroy@live.com"}
]
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries",
    "Topic :: File Formats :: JSON",
    "Development Status :: 4 - Beta",
]
keywords = ["parser", "betfair", "api", "json", "streaming"]
dependencies = [
    "msgspec>=0.20.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.1",
    "pytest-asyncio>=0.21.0",
    "pytest-benchmark>=4.0",
    "twine>=4.0.2",
    "requests>=2.20.0",
]

[project.urls]
Homepage = "https://github.com/limx0/betfair_parser"
Documentation = "https://limx0.github.io/betfair_parser/"
"Bug Tracker" = "https://github.com/limx0/betfair_parser/issues"

[tool.codespell]
skip = "*.bz2,*.json,*.ndjson,*.xml,uv.lock"
ignore-regex = ".*codespell-ignore$"

[tool.mypy]
strict_optional = false
ignore_missing_imports = true
warn_no_return = true
warn_unused_ignores = true
check_untyped_defs = true

[tool.ruff]
fix = false
line-length = 120
lint.extend-select = ["UP", "I"]
lint.isort.lines-after-imports = 2

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
